style.css
.triangle, .triangle2{
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 100px 173.2px 100px;
    border-color: transparent transparent #A9EBA8 transparent;
    transform: rotate(25deg) translate(250%, 50%);
    position: fixed;
}
.triangle2 {
    transform: rotate(25deg) translate(260%, 45%);
    border-color: transparent transparent #E8ED9F transparent;
}
.square, .square2{
    width: 120px;
    height: 120px;
    background: #8FBACD;
    transform: rotate(25deg) translate(-250%, 500%);
    position: fixed;
}
.square2 {
    transform: rotate(25deg) translate(-260%, 510%);
    background: #9584CA;
}
.circle, .circle2{
    width: 120px;
    height: 120px;
    border-radius: 50%;
    background: #9584CA;
    transform: rotate(25deg) translate(-300%, 300%);
    position: fixed;
}
.circle2{
    background: #CE6882;
    transform: rotate(25deg) translate(-310%, 310%);
    position: fixed;
}
.front{
    margin-left: 35%;
    width: 120px;
    height: 120px;
    border-radius: 50%;
    background: rgb(226, 114, 114);
    color: white;
    border-style: solid;
}
.front p{
    font-size: 20px;
    padding: 5%;
    text-align: center;
}
.flip-container {
    perspective: 1000;
}
.flip-container:hover .flipper, .flip-container.hover .flipper {
    transform: rotateY(180deg);
}
.flip-container, .front, .back {
    width: 100px;
    height: 100px;
    margin: 1em auto;
}
/* flip speed goes here */
.flipper {
    transition: 0.6s;
    transform-style: preserve-3d;
    position: relative;
}
/* hide back of pane during swap */
.front, .back {
    backface-visibility: hidden;
    position: absolute;
    top: 0;
    left: 0;
    color: cornSilk;
    text-align: center;
}
/* front pane, placed above back */
.front {
    z-index: 2;
   /* for firefox 31 */
    display: inline-block;
    width: 100px;
    height: 100px;
}
/* back, initially hidden pane */
.back {
    display: inline-block;
    width: 100px;
    height: 100px;
    background: url(oliver.png);
    background-position: 50% 50%;
    background-size: cover;
    border-radius: 50%;
    transform: rotateY(180deg);
    cursor: pointer;
}
body {
    background-color: #4D4D4D;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: 'Calistoga', 'Times New Roman', Times, sans-serif;
}
h1, h2, h3, h4 {
    color: #fffeec;
    font-weight: 100;
}
h1, h4{
    text-decoration: underline;
    text-underline-offset: 5px;
    white-space: nowrap;
}
h1 {
    font-size: 76px;
    color: white;
    padding: 40px;
    padding-top: 0px;
    height: 10px;
    margin: 10px;
    text-underline-offset: 10px;
}
h2 {
    font-size: 36px;
}
h3 {
    font-size: 24px;
    border-bottom:3px solid #fffeec;
    width:400px;
    padding-bottom:5px;
}

.intro {
    color:#fffeec;
    font-size: 20px;
}
.name {
    display: flex;
    flex-wrap: wrap;
    flex-basis: auto;
    flex-shrink: 0;
    min-width: 0;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.links {
    text-align: center;
    width: fit-content;
    display: inline-flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: center;
    color: black;
    font-size: large;
}
.button {
    display: block;
    border-radius: 5px;
    margin: 10px;
    background-color: white;
    text-align: center;
    padding: 10px;
    cursor: pointer;

}


#green {
    background-color: #C6E5BE;
    transition: 0.3s;
}
#purple {
    background-color: #C5D1F6;
}
#green:hover{
    background-color: #a5c29e;
}
#purple:hover{
    background-color: #adb9dc;
}


@media screen and (max-width: 720px){
    h1 {
        font-size: 42px;
   }
    h2 {
        font-size: 20px;
   }
}
@media screen and (max-width: 860px){
    .shapes {
        opacity: 0;
   }
}
@media screen and (max-width: 420px){
    h1 {
        padding-left: 0px;
        padding-right: 0px;
   }
    .links{
        width: 300px;
   }
    h3 {
        font-size: 24px;
        text-align: center;
        border-bottom:3px solid #fffeec;
        width:300px;
        padding-bottom:5px;
   }
}
@media screen and (max-width: 330px){
    h1 {
        padding-left: 0px;
        padding-right: 0px;
        font-size: 36px;
   }
    .links{
        width: 300px;
   }
    h3 {
        font-size: 24px;
        text-align: center;
        border-bottom:3px solid #fffeec;
        width:300px;
        padding-bottom:5px;
   }
}

